--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "~2.14.9",
+    "ember-elsewhere": "^1.0.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-route-action-helper": "^2.0.6",
     "ember-source": "~2.14.1",
     "ember-welcome-page": "^3.0.0",
+    "liquid-fire": "^0.28.0",
     "loader.js": "^4.2.3"
   },
   "engines": {
